--- a/notebooks/001_load_raw_grammys.ipynb
+++ b/notebooks/001_load_raw_grammys.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -167,7 +167,7 @@
        "4  https://www.grammy.com/sites/com/files/styles/...    True  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -198,7 +198,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -209,24 +209,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
-     "ename": "UnboundLocalError",
-     "evalue": "cannot access local variable 'engine' where it is not associated with a value",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mValueError\u001b[39m                                Traceback (most recent call last)",
-      "\u001b[36mFile \u001b[39m\u001b[32m~/proyecto/workshop_2_etl_process_using_airflow/pipelines/workshop_2_etl_process_using_airflow/db/database_create.py:19\u001b[39m, in \u001b[36mcreate_database\u001b[39m\u001b[34m()\u001b[39m\n\u001b[32m     18\u001b[39m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[32m---> \u001b[39m\u001b[32m19\u001b[39m     engine = \u001b[43mconnect_db\u001b[49m\u001b[43m(\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mpostgres\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[32m     20\u001b[39m     \u001b[38;5;28;01mwith\u001b[39;00m engine.connect() \u001b[38;5;28;01mas\u001b[39;00m connection:\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~/proyecto/workshop_2_etl_process_using_airflow/pipelines/workshop_2_etl_process_using_airflow/db/db_conection.py:25\u001b[39m, in \u001b[36mconnect_db\u001b[39m\u001b[34m(db_name)\u001b[39m\n\u001b[32m     24\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28mall\u001b[39m([user, password, host, port, database]):\n\u001b[32m---> \u001b[39m\u001b[32m25\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\n\u001b[32m     26\u001b[39m         \u001b[33m\"\u001b[39m\u001b[33mMissing database configuration values.\u001b[39m\u001b[38;5;130;01m\\\u001b[39;00m\n\u001b[32m     27\u001b[39m \u001b[33m                      Check your .env file.\u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m     28\u001b[39m     )\n\u001b[32m     30\u001b[39m \u001b[38;5;28;01mreturn\u001b[39;00m create_engine(connection_url)\n",
-      "\u001b[31mValueError\u001b[39m: Missing database configuration values.                          Check your .env file.",
-      "\nDuring handling of the above exception, another exception occurred:\n",
-      "\u001b[31mUnboundLocalError\u001b[39m                         Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[8]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[43mcreate_database\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~/proyecto/workshop_2_etl_process_using_airflow/pipelines/workshop_2_etl_process_using_airflow/db/database_create.py:45\u001b[39m, in \u001b[36mcreate_database\u001b[39m\u001b[34m()\u001b[39m\n\u001b[32m     42\u001b[39m     \u001b[38;5;28mprint\u001b[39m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mUnexpected runtime error: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00me\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m\"\u001b[39m)\n\u001b[32m     44\u001b[39m \u001b[38;5;28;01mfinally\u001b[39;00m:\n\u001b[32m---> \u001b[39m\u001b[32m45\u001b[39m     \u001b[43mengine\u001b[49m.dispose()\n",
-      "\u001b[31mUnboundLocalError\u001b[39m: cannot access local variable 'engine' where it is not associated with a value"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Database 'grammyAwards' already exists.\n"
      ]
     }
    ],
@@ -236,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -245,9 +235,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Data inserted correctly\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "data.to_sql(\"grammyAwards\", engine, if_exists=\"replace\", index=False)\n",
