funcion de store

--- a/notebooks/001_load_raw_grammys.ipynb
+++ b/notebooks/001_load_raw_grammys.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,8 +17,8 @@
     "import os\n",
     "sys.path.append(os.path.abspath(os.path.join(os.getcwd(), \"..\")))\n",
     "import pandas as pd\n",
-    "from pipelines.workshop_2_etl_process_using_airflow.db.db_conection import connect_db\n",
-    "from pipelines.workshop_2_etl_process_using_airflow.db.database_create import create_database\n",
+    "from src.db.db_conection import connect_db \n",
+    "from src.db.database_create import create_database\n",
     "from sqlalchemy import text "
    ]
   },
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -167,7 +167,7 @@
        "4  https://www.grammy.com/sites/com/files/styles/...    True  "
       ]
      },
-     "execution_count": 40,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -198,7 +198,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -235,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -255,9 +255,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "py3_workshop_2_etl_process_using_airflow",
+   "display_name": "venv",
    "language": "python",
-   "name": "py3_workshop_2_etl_process_using_airflow"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
