--- a/notebooks/005_eda_spotify_grammy_merged.ipynb
+++ b/notebooks/005_eda_spotify_grammy_merged.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "a9e365a6",
    "metadata": {},
    "outputs": [],
@@ -15,10 +15,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
+   "id": "ddff5711",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "id": "23fec65e",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_183294/1867949302.py:1: DtypeWarning: Columns (26,27,28,29,33,34,35,36) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  df = pd.read_csv('../data/2_final/spotify_grammy_merged.csv')\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -51,16 +67,16 @@
        "      <th>danceability</th>\n",
        "      <th>energy</th>\n",
        "      <th>...</th>\n",
-       "      <th>instrumentalness</th>\n",
-       "      <th>liveness</th>\n",
-       "      <th>valence</th>\n",
-       "      <th>tempo</th>\n",
-       "      <th>time_signature</th>\n",
-       "      <th>popularity_category</th>\n",
-       "      <th>year</th>\n",
-       "      <th>title</th>\n",
-       "      <th>category</th>\n",
-       "      <th>winner</th>\n",
+       "      <th>sort_name</th>\n",
+       "      <th>type</th>\n",
+       "      <th>country</th>\n",
+       "      <th>begin_area</th>\n",
+       "      <th>begin_date</th>\n",
+       "      <th>end_date</th>\n",
+       "      <th>genres</th>\n",
+       "      <th>tags</th>\n",
+       "      <th>release_groups</th>\n",
+       "      <th>timestamp</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -70,23 +86,23 @@
        "      <td>german</td>\n",
        "      <td>rill</td>\n",
        "      <td>Lolly</td>\n",
-       "      <td>lolly</td>\n",
+       "      <td>Lolly</td>\n",
        "      <td>44</td>\n",
        "      <td>160725</td>\n",
        "      <td>True</td>\n",
        "      <td>0.910</td>\n",
        "      <td>0.374</td>\n",
        "      <td>...</td>\n",
-       "      <td>0.00301</td>\n",
-       "      <td>0.1540</td>\n",
-       "      <td>0.432</td>\n",
-       "      <td>104.042</td>\n",
-       "      <td>4</td>\n",
-       "      <td>Medium</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>False</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -94,23 +110,23 @@
        "      <td>club</td>\n",
        "      <td>glee cast</td>\n",
        "      <td>Glee Love Songs</td>\n",
-       "      <td>it's all coming back to me now (glee cast vers...</td>\n",
+       "      <td>It's All Coming Back To Me Now (Glee Cast Vers...</td>\n",
        "      <td>47</td>\n",
        "      <td>322933</td>\n",
        "      <td>False</td>\n",
        "      <td>0.269</td>\n",
        "      <td>0.516</td>\n",
        "      <td>...</td>\n",
-       "      <td>0.00000</td>\n",
-       "      <td>0.1170</td>\n",
-       "      <td>0.341</td>\n",
-       "      <td>178.174</td>\n",
-       "      <td>4</td>\n",
-       "      <td>Medium</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>False</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -118,23 +134,23 @@
        "      <td>minimal-techno</td>\n",
        "      <td>paul kalkbrenner;pig&amp;dan</td>\n",
        "      <td>X</td>\n",
-       "      <td>böxig leise - pig &amp; dan remix</td>\n",
+       "      <td>Böxig Leise - Pig &amp; Dan Remix</td>\n",
        "      <td>22</td>\n",
        "      <td>515360</td>\n",
        "      <td>False</td>\n",
        "      <td>0.686</td>\n",
        "      <td>0.560</td>\n",
        "      <td>...</td>\n",
-       "      <td>0.18100</td>\n",
-       "      <td>0.1110</td>\n",
-       "      <td>0.108</td>\n",
-       "      <td>119.997</td>\n",
-       "      <td>4</td>\n",
-       "      <td>Low</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>False</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -142,23 +158,23 @@
        "      <td>hip-hop</td>\n",
        "      <td>jordan sandhu</td>\n",
        "      <td>Teeje Week</td>\n",
-       "      <td>teeje week</td>\n",
+       "      <td>Teeje Week</td>\n",
        "      <td>62</td>\n",
        "      <td>190203</td>\n",
        "      <td>False</td>\n",
        "      <td>0.679</td>\n",
        "      <td>0.770</td>\n",
        "      <td>...</td>\n",
-       "      <td>0.00000</td>\n",
-       "      <td>0.0825</td>\n",
-       "      <td>0.839</td>\n",
-       "      <td>161.721</td>\n",
-       "      <td>4</td>\n",
-       "      <td>High</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>False</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -166,27 +182,27 @@
        "      <td>minimal-techno</td>\n",
        "      <td>paul kalkbrenner</td>\n",
        "      <td>Zeit</td>\n",
-       "      <td>tief</td>\n",
+       "      <td>Tief</td>\n",
        "      <td>19</td>\n",
        "      <td>331240</td>\n",
        "      <td>False</td>\n",
        "      <td>0.519</td>\n",
        "      <td>0.431</td>\n",
        "      <td>...</td>\n",
-       "      <td>0.72000</td>\n",
-       "      <td>0.0916</td>\n",
-       "      <td>0.234</td>\n",
-       "      <td>129.971</td>\n",
-       "      <td>4</td>\n",
-       "      <td>Very Low</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>False</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 25 columns</p>\n",
+       "<p>5 rows × 37 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -198,37 +214,37 @@
        "4  000qpdoc97IMTBvF8gwcpy  minimal-techno          paul kalkbrenner   \n",
        "\n",
        "        album_name                                         track_name  \\\n",
-       "0            Lolly                                              lolly   \n",
-       "1  Glee Love Songs  it's all coming back to me now (glee cast vers...   \n",
-       "2                X                      böxig leise - pig & dan remix   \n",
-       "3       Teeje Week                                         teeje week   \n",
-       "4             Zeit                                               tief   \n",
+       "0            Lolly                                              Lolly   \n",
+       "1  Glee Love Songs  It's All Coming Back To Me Now (Glee Cast Vers...   \n",
+       "2                X                      Böxig Leise - Pig & Dan Remix   \n",
+       "3       Teeje Week                                         Teeje Week   \n",
+       "4             Zeit                                               Tief   \n",
        "\n",
-       "   popularity  duration_ms  explicit  danceability  energy  ...  \\\n",
-       "0          44       160725      True         0.910   0.374  ...   \n",
-       "1          47       322933     False         0.269   0.516  ...   \n",
-       "2          22       515360     False         0.686   0.560  ...   \n",
-       "3          62       190203     False         0.679   0.770  ...   \n",
-       "4          19       331240     False         0.519   0.431  ...   \n",
+       "   popularity  duration_ms  explicit  danceability  energy  ...  sort_name  \\\n",
+       "0          44       160725      True         0.910   0.374  ...        NaN   \n",
+       "1          47       322933     False         0.269   0.516  ...        NaN   \n",
+       "2          22       515360     False         0.686   0.560  ...        NaN   \n",
+       "3          62       190203     False         0.679   0.770  ...        NaN   \n",
+       "4          19       331240     False         0.519   0.431  ...        NaN   \n",
        "\n",
-       "   instrumentalness  liveness  valence    tempo  time_signature  \\\n",
-       "0           0.00301    0.1540    0.432  104.042               4   \n",
-       "1           0.00000    0.1170    0.341  178.174               4   \n",
-       "2           0.18100    0.1110    0.108  119.997               4   \n",
-       "3           0.00000    0.0825    0.839  161.721               4   \n",
-       "4           0.72000    0.0916    0.234  129.971               4   \n",
+       "   type  country  begin_area  begin_date  end_date  genres  tags  \\\n",
+       "0   NaN      NaN         NaN         NaN       NaN     NaN   NaN   \n",
+       "1   NaN      NaN         NaN         NaN       NaN     NaN   NaN   \n",
+       "2   NaN      NaN         NaN         NaN       NaN     NaN   NaN   \n",
+       "3   NaN      NaN         NaN         NaN       NaN     NaN   NaN   \n",
+       "4   NaN      NaN         NaN         NaN       NaN     NaN   NaN   \n",
        "\n",
-       "   popularity_category  year  title  category  winner  \n",
-       "0               Medium   NaN    NaN       NaN   False  \n",
-       "1               Medium   NaN    NaN       NaN   False  \n",
-       "2                  Low   NaN    NaN       NaN   False  \n",
-       "3                 High   NaN    NaN       NaN   False  \n",
-       "4             Very Low   NaN    NaN       NaN   False  \n",
+       "   release_groups  timestamp  \n",
+       "0             NaN        NaN  \n",
+       "1             NaN        NaN  \n",
+       "2             NaN        NaN  \n",
+       "3             NaN        NaN  \n",
+       "4             NaN        NaN  \n",
        "\n",
-       "[5 rows x 25 columns]"
+       "[5 rows x 37 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -240,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -248,37 +264,49 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 89740 entries, 0 to 89739\n",
-      "Data columns (total 25 columns):\n",
+      "RangeIndex: 92166 entries, 0 to 92165\n",
+      "Data columns (total 37 columns):\n",
       " #   Column               Non-Null Count  Dtype  \n",
       "---  ------               --------------  -----  \n",
-      " 0   track_id             89740 non-null  object \n",
-      " 1   track_genre          89740 non-null  object \n",
-      " 2   artists              89740 non-null  object \n",
-      " 3   album_name           89740 non-null  object \n",
-      " 4   track_name           89740 non-null  object \n",
-      " 5   popularity           89740 non-null  int64  \n",
-      " 6   duration_ms          89740 non-null  int64  \n",
-      " 7   explicit             89740 non-null  bool   \n",
-      " 8   danceability         89740 non-null  float64\n",
-      " 9   energy               89740 non-null  float64\n",
-      " 10  key                  89740 non-null  int64  \n",
-      " 11  loudness             89740 non-null  float64\n",
-      " 12  mode                 89740 non-null  int64  \n",
-      " 13  speechiness          89740 non-null  float64\n",
-      " 14  acousticness         89740 non-null  float64\n",
-      " 15  instrumentalness     89740 non-null  float64\n",
-      " 16  liveness             89740 non-null  float64\n",
-      " 17  valence              89740 non-null  float64\n",
-      " 18  tempo                89740 non-null  float64\n",
-      " 19  time_signature       89740 non-null  int64  \n",
-      " 20  popularity_category  89740 non-null  object \n",
-      " 21  year                 0 non-null      float64\n",
-      " 22  title                0 non-null      float64\n",
-      " 23  category             0 non-null      float64\n",
-      " 24  winner               89740 non-null  bool   \n",
-      "dtypes: bool(2), float64(12), int64(5), object(6)\n",
-      "memory usage: 15.9+ MB\n"
+      " 0   track_id             92166 non-null  object \n",
+      " 1   track_genre          92166 non-null  object \n",
+      " 2   artists              92166 non-null  object \n",
+      " 3   album_name           92166 non-null  object \n",
+      " 4   track_name           92166 non-null  object \n",
+      " 5   popularity           92166 non-null  int64  \n",
+      " 6   duration_ms          92166 non-null  int64  \n",
+      " 7   explicit             92166 non-null  bool   \n",
+      " 8   danceability         92166 non-null  float64\n",
+      " 9   energy               92166 non-null  float64\n",
+      " 10  key                  92166 non-null  int64  \n",
+      " 11  loudness             92166 non-null  float64\n",
+      " 12  mode                 92166 non-null  int64  \n",
+      " 13  speechiness          92166 non-null  float64\n",
+      " 14  acousticness         92166 non-null  float64\n",
+      " 15  instrumentalness     92166 non-null  float64\n",
+      " 16  liveness             92166 non-null  float64\n",
+      " 17  valence              92166 non-null  float64\n",
+      " 18  tempo                92166 non-null  float64\n",
+      " 19  time_signature       92166 non-null  int64  \n",
+      " 20  popularity_category  92166 non-null  object \n",
+      " 21  year                 4648 non-null   float64\n",
+      " 22  title                4648 non-null   object \n",
+      " 23  category             4648 non-null   object \n",
+      " 24  nominee              4648 non-null   object \n",
+      " 25  winner               92166 non-null  bool   \n",
+      " 26  artist_id            6 non-null      object \n",
+      " 27  sort_name            6 non-null      object \n",
+      " 28  type                 2 non-null      object \n",
+      " 29  country              2 non-null      object \n",
+      " 30  begin_area           0 non-null      float64\n",
+      " 31  begin_date           0 non-null      float64\n",
+      " 32  end_date             0 non-null      float64\n",
+      " 33  genres               2 non-null      object \n",
+      " 34  tags                 2 non-null      object \n",
+      " 35  release_groups       6 non-null      object \n",
+      " 36  timestamp            6 non-null      object \n",
+      "dtypes: bool(2), float64(13), int64(5), object(17)\n",
+      "memory usage: 24.8+ MB\n"
      ]
     }
    ],
@@ -288,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "a119e223",
    "metadata": {},
    "outputs": [
@@ -296,8 +324,30 @@
      "data": {
       "text/plain": [
        "winner\n",
-       "False    89740\n",
+       "False    87518\n",
+       "True      4648\n",
        "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['winner'].value_counts()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "d6299410",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(92166, 37)"
       ]
      },
      "execution_count": 5,
@@ -306,7 +356,28 @@
     }
    ],
    "source": [
-    "df['winner'].value_counts()\n"
+    "df.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([nan, 'DO'], dtype=object)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "values = df[\"country\"].unique()\n",
+    "values"
    ]
   }
  ],
